// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget-all-terminal-halt.acceptance given: [case1] level 1 exhausts but level 2 still has budget when: [t0] artifact created, first attempt then: snapshot [t0]: l1 rejected, l2 awaits, no halt 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: quick-fail (l1, 1/1)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.quick-fail.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.quick-fail.md
   │
   ├─ r2: thorough (l2, 0/2)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: quick-fail (l1, 1/1)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.quick-fail.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.quick-fail.md
      │   └─ r2: thorough (l2, 0/2)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-all-terminal-halt.acceptance given: [case1] level 1 exhausts but level 2 still has budget when: [t1] second attempt, level 1 exhausts, level 2 unlocks then: snapshot [t1]: l1 exhausted, l2 rejected (1/2) 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: quick-fail (l1, 1/1)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.quick-fail.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.quick-fail.md
   │
   ├─ r2: thorough (l2, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r002._.given.by_peer.thorough.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r002._.taken.by_self.thorough.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: quick-fail (l1, 1/1)
      │   │   ├─ exhausted 🌙, cached
      │   │   ├─ terminal — does not block higher levels
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.quick-fail.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.quick-fail.md
      │   └─ r2: thorough (l2, 1/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r002._.given.by_peer.thorough.md
      │       └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r002._.taken.by_self.thorough.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)

🪷 the path continues
   ├─ l1 is terminal (exhausted 🌙) — it no longer blocks you
   ├─ l2 has engaged — address its blockers, then:
   │  └─ rhx route.stone.set --stone 1.vision --as arrived
   └─ a human is only needed once every level is terminal
"
`;

exports[`driver.route.peer-budget-all-terminal-halt.acceptance given: [case1] level 1 exhausts but level 2 still has budget when: [t2.5] fourth attempt, thorough now exhausted (review SKIPPED) then: snapshot [t2.5]: both exhausted, route halted 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: quick-fail (l1, 1/1)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.quick-fail.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.quick-fail.md
   │
   ├─ r2: thorough (l2, 2/2)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.thorough.md
   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.thorough.md
   │
   └─ halted: peer reviewer budget exhausted

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: quick-fail, thorough
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --stone 1.vision
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.vision --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          ├─ r1: quick-fail (l1, 1/1)
          │   ├─ exhausted 🌙, cached
          │   ├─ terminal — does not block higher levels
          │   ├─ 1 blocker 🔴
          │   ├─ 0 nitpicks ✓
          │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.quick-fail.md
          │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.quick-fail.md
          └─ r2: thorough (l2, 2/2)
              ├─ exhausted 🌙, cached
              ├─ terminal — does not block higher levels
              ├─ 1 blocker 🔴
              ├─ 0 nitpicks ✓
              ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.thorough.md
              └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.thorough.md
"
`;

exports[`driver.route.peer-budget-all-terminal-halt.acceptance given: [case1] level 1 exhausts but level 2 still has budget when: [t2] third attempt, thorough at budget limit then: snapshot [t2]: l1 exhausted, l2 rejected (2/2) 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: quick-fail (l1, 1/1)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.quick-fail.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.quick-fail.md
   │
   ├─ r2: thorough (l2, 2/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.thorough.md
   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.thorough.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: quick-fail (l1, 1/1)
      │   │   ├─ exhausted 🌙, cached
      │   │   ├─ terminal — does not block higher levels
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.quick-fail.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.quick-fail.md
      │   └─ r2: thorough (l2, 2/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.thorough.md
      │       └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.thorough.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)

🪷 the path continues
   ├─ l1 is terminal (exhausted 🌙) — it no longer blocks you
   ├─ l2 has engaged — address its blockers, then:
   │  └─ rhx route.stone.set --stone 1.vision --as arrived
   └─ a human is only needed once every level is terminal
"
`;
